--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: build
-on: [push, pull_request]
+on: [push]
 jobs:
 
   build:
@@ -23,21 +23,7 @@ jobs:
     - name: build docker image
       run: docker build .
 
-    - name: build and deploy master image to ghcr.io and dockerhub
-      if: ${{ github.ref == 'refs/heads/master' }}
-      env:
-        GITHUB_PACKAGE_TOKEN: ${{ secrets.PKG_TOKEN }}
-        DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
-        USERNAME: ${{ github.actor }}
-        GITHUB_SHA: ${{ github.sha}}
-        GITHUB_REF: ${{ github.ref}}
-      run: |
-        echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        docker buildx build --push \
-            --build-arg CI=github --build-arg GITHUB_SHA=${GITHUB_SHA} --build-arg GIT_BRANCH=${ref} \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ghcr.io/${USERNAME}/dockvpn:${ref} -t ${USERNAME}/dockvpn:${ref} .
-    - name: deploy tagged (latest) to ghcr.io and dockerhub
+    - name: deploy tagged (latest) to ghcr.io
       if: ${{ startsWith(github.ref, 'refs/tags/') }}
       env:
         GITHUB_PACKAGE_TOKEN: ${{ secrets.PKG_TOKEN }}
@@ -48,7 +34,7 @@ jobs:
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
         docker buildx build --push \
-            --build-arg CI=github --build-arg GITHUB_SHA=${GITHUB_SHA} --build-arg GIT_BRANCH=${ref} \
+            --build-arg CI=github --build-arg GITHUB_SHA=${GITHUB_SHA} --build-arg GIT_BRANCH=master \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ghcr.io/${USERNAME}/dockvpn:${ref} -t ghcr.io/${USERNAME}/dockvpn:latest \
             -t ${USERNAME}/dockvpn:${ref} -t ${USERNAME}/dockvpn:latest .
