--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     - name: build docker image
       run: docker build .
 
-    - name: deploy tagged (latest) to ghcr.io
+    - name: deploy master (latest) to ghcr.io
       if: ${{ startsWith(github.ref, 'refs/tags/') }}
       env:
         GITHUB_PACKAGE_TOKEN: ${{ secrets.PKG_TOKEN }}
@@ -36,7 +36,6 @@ jobs:
         docker buildx build --push \
             --build-arg CI=github --build-arg GITHUB_SHA=${GITHUB_SHA} --build-arg GIT_BRANCH=master \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ghcr.io/${USERNAME}/dockvpn:${ref} -t ghcr.io/${USERNAME}/dockvpn:latest \
-            -t ${USERNAME}/dockvpn:${ref} -t ${USERNAME}/dockvpn:latest .
+            -t ghcr.io/${{ github.repository_owner }}/dockvpn:latest .
 
 
